tests/baselines/reference/jsFileCompilationDecoratorSyntax.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,1): error TS8017: 'decorators' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    @internal class C { }
    ~~~~~~~~~
!!! error TS8017: 'decorators' can only be used in a .ts file.